# gitingest-mcp

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
gitingest-mcp/: requirements.txt  server.py
src/: main.py
src/prompts/: __init__.py  index.py
src/server/: __init__.py
src/tools/: __init__.py  index.py
