[project]
name = "gitingest-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitingest",
    "mcp[cli]>=1.7.1",
]

[tool.uv.sources]
gitingest = { path = "gitingest-0.1.4.tar.gz" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
